quantum/plugins/ibm/compiler/generated/OQASM2Parser.cpp

// Generated from OQASM2.g4 by ANTLR 4.7.1


#include "OQASM2Listener.h"

#include "OQASM2Parser.h"


using namespace antlrcpp;
using namespace oqasm;
using namespace antlr4;

OQASM2Parser::OQASM2Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

OQASM2Parser::~OQASM2Parser() {
  delete _interpreter;
}

std::string OQASM2Parser::getGrammarFileName() const {
  return "OQASM2.g4";
}

const std::vector<std::string>& OQASM2Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& OQASM2Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- XaccsrcContext ------------------------------------------------------------------

OQASM2Parser::XaccsrcContext::XaccsrcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<OQASM2Parser::XacckernelContext *> OQASM2Parser::XaccsrcContext::xacckernel() {
  return getRuleContexts<OQASM2Parser::XacckernelContext>();
}

OQASM2Parser::XacckernelContext* OQASM2Parser::XaccsrcContext::xacckernel(size_t i) {
  return getRuleContext<OQASM2Parser::XacckernelContext>(i);
}


size_t OQASM2Parser::XaccsrcContext::getRuleIndex() const {
  return OQASM2Parser::RuleXaccsrc;
}

void OQASM2Parser::XaccsrcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXaccsrc(this);
}

void OQASM2Parser::XaccsrcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXaccsrc(this);
}

OQASM2Parser::XaccsrcContext* OQASM2Parser::xaccsrc() {
  XaccsrcContext *_localctx = _tracker.createInstance<XaccsrcContext>(_ctx, getState());
  enterRule(_localctx, 0, OQASM2Parser::RuleXaccsrc);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == OQASM2Parser::T__0) {
      setState(90);
      xacckernel();
      setState(95);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- XacckernelContext ------------------------------------------------------------------

OQASM2Parser::XacckernelContext::XacckernelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OQASM2Parser::MainprogContext* OQASM2Parser::XacckernelContext::mainprog() {
  return getRuleContext<OQASM2Parser::MainprogContext>(0);
}

std::vector<OQASM2Parser::IdContext *> OQASM2Parser::XacckernelContext::id() {
  return getRuleContexts<OQASM2Parser::IdContext>();
}

OQASM2Parser::IdContext* OQASM2Parser::XacckernelContext::id(size_t i) {
  return getRuleContext<OQASM2Parser::IdContext>(i);
}

std::vector<OQASM2Parser::TypedparamContext *> OQASM2Parser::XacckernelContext::typedparam() {
  return getRuleContexts<OQASM2Parser::TypedparamContext>();
}

OQASM2Parser::TypedparamContext* OQASM2Parser::XacckernelContext::typedparam(size_t i) {
  return getRuleContext<OQASM2Parser::TypedparamContext>(i);
}


size_t OQASM2Parser::XacckernelContext::getRuleIndex() const {
  return OQASM2Parser::RuleXacckernel;
}

void OQASM2Parser::XacckernelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXacckernel(this);
}

void OQASM2Parser::XacckernelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXacckernel(this);
}

OQASM2Parser::XacckernelContext* OQASM2Parser::xacckernel() {
  XacckernelContext *_localctx = _tracker.createInstance<XacckernelContext>(_ctx, getState());
  enterRule(_localctx, 2, OQASM2Parser::RuleXacckernel);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(OQASM2Parser::T__0);
    setState(97);
    dynamic_cast<XacckernelContext *>(_localctx)->kernelname = id();
    setState(98);
    match(OQASM2Parser::T__1);
    setState(99);
    match(OQASM2Parser::T__2);
    setState(100);
    dynamic_cast<XacckernelContext *>(_localctx)->acceleratorbuffer = id();
    setState(105);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == OQASM2Parser::T__3) {
      setState(101);
      match(OQASM2Parser::T__3);
      setState(102);
      typedparam();
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(108);
    match(OQASM2Parser::T__4);
    setState(109);
    match(OQASM2Parser::T__5);
    setState(110);
    mainprog();
    setState(111);
    match(OQASM2Parser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypedparamContext ------------------------------------------------------------------

OQASM2Parser::TypedparamContext::TypedparamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OQASM2Parser::TypeContext* OQASM2Parser::TypedparamContext::type() {
  return getRuleContext<OQASM2Parser::TypeContext>(0);
}

OQASM2Parser::ParamContext* OQASM2Parser::TypedparamContext::param() {
  return getRuleContext<OQASM2Parser::ParamContext>(0);
}


size_t OQASM2Parser::TypedparamContext::getRuleIndex() const {
  return OQASM2Parser::RuleTypedparam;
}

void OQASM2Parser::TypedparamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypedparam(this);
}

void OQASM2Parser::TypedparamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypedparam(this);
}

OQASM2Parser::TypedparamContext* OQASM2Parser::typedparam() {
  TypedparamContext *_localctx = _tracker.createInstance<TypedparamContext>(_ctx, getState());
  enterRule(_localctx, 4, OQASM2Parser::RuleTypedparam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    type();
    setState(114);
    param();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

OQASM2Parser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t OQASM2Parser::TypeContext::getRuleIndex() const {
  return OQASM2Parser::RuleType;
}

void OQASM2Parser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void OQASM2Parser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

OQASM2Parser::TypeContext* OQASM2Parser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 6, OQASM2Parser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << OQASM2Parser::T__7)
      | (1ULL << OQASM2Parser::T__8)
      | (1ULL << OQASM2Parser::T__9))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- KernelcallContext ------------------------------------------------------------------

OQASM2Parser::KernelcallContext::KernelcallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OQASM2Parser::IdContext* OQASM2Parser::KernelcallContext::id() {
  return getRuleContext<OQASM2Parser::IdContext>(0);
}

std::vector<OQASM2Parser::ParamContext *> OQASM2Parser::KernelcallContext::param() {
  return getRuleContexts<OQASM2Parser::ParamContext>();
}

OQASM2Parser::ParamContext* OQASM2Parser::KernelcallContext::param(size_t i) {
  return getRuleContext<OQASM2Parser::ParamContext>(i);
}


size_t OQASM2Parser::KernelcallContext::getRuleIndex() const {
  return OQASM2Parser::RuleKernelcall;
}

void OQASM2Parser::KernelcallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterKernelcall(this);
}

void OQASM2Parser::KernelcallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitKernelcall(this);
}

OQASM2Parser::KernelcallContext* OQASM2Parser::kernelcall() {
  KernelcallContext *_localctx = _tracker.createInstance<KernelcallContext>(_ctx, getState());
  enterRule(_localctx, 8, OQASM2Parser::RuleKernelcall);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    dynamic_cast<KernelcallContext *>(_localctx)->kernelname = id();
    setState(119);
    match(OQASM2Parser::T__1);
    setState(121);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == OQASM2Parser::ID) {
      setState(120);
      param();
    }
    setState(127);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == OQASM2Parser::T__3) {
      setState(123);
      match(OQASM2Parser::T__3);
      setState(124);
      param();
      setState(129);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(130);
    match(OQASM2Parser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainprogContext ------------------------------------------------------------------

OQASM2Parser::MainprogContext::MainprogContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OQASM2Parser::MainprogContext::OPENQASM() {
  return getToken(OQASM2Parser::OPENQASM, 0);
}

OQASM2Parser::RealContext* OQASM2Parser::MainprogContext::real() {
  return getRuleContext<OQASM2Parser::RealContext>(0);
}

std::vector<OQASM2Parser::CommentContext *> OQASM2Parser::MainprogContext::comment() {
  return getRuleContexts<OQASM2Parser::CommentContext>();
}

OQASM2Parser::CommentContext* OQASM2Parser::MainprogContext::comment(size_t i) {
  return getRuleContext<OQASM2Parser::CommentContext>(i);
}

OQASM2Parser::ProgramContext* OQASM2Parser::MainprogContext::program() {
  return getRuleContext<OQASM2Parser::ProgramContext>(0);
}


size_t OQASM2Parser::MainprogContext::getRuleIndex() const {
  return OQASM2Parser::RuleMainprog;
}

void OQASM2Parser::MainprogContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainprog(this);
}

void OQASM2Parser::MainprogContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainprog(this);
}

OQASM2Parser::MainprogContext* OQASM2Parser::mainprog() {
  MainprogContext *_localctx = _tracker.createInstance<MainprogContext>(_ctx, getState());
  enterRule(_localctx, 10, OQASM2Parser::RuleMainprog);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == OQASM2Parser::COMMENT) {
      setState(132);
      comment();
      setState(137);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(138);
    match(OQASM2Parser::OPENQASM);
    setState(139);
    real();
    setState(140);
    match(OQASM2Parser::T__10);
    setState(142);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << OQASM2Parser::T__11)
      | (1ULL << OQASM2Parser::T__14)
      | (1ULL << OQASM2Parser::T__15)
      | (1ULL << OQASM2Parser::T__16)
      | (1ULL << OQASM2Parser::COMMENT)
      | (1ULL << OQASM2Parser::QREG)
      | (1ULL << OQASM2Parser::CREG)
      | (1ULL << OQASM2Parser::GATE)
      | (1ULL << OQASM2Parser::MEASURE)
      | (1ULL << OQASM2Parser::RESET)
      | (1ULL << OQASM2Parser::BARRIER)
      | (1ULL << OQASM2Parser::OPAQUE)
      | (1ULL << OQASM2Parser::ID))) != 0)) {
      setState(141);
      program();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

OQASM2Parser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<OQASM2Parser::LineContext *> OQASM2Parser::ProgramContext::line() {
  return getRuleContexts<OQASM2Parser::LineContext>();
}

OQASM2Parser::LineContext* OQASM2Parser::ProgramContext::line(size_t i) {
  return getRuleContext<OQASM2Parser::LineContext>(i);
}


size_t OQASM2Parser::ProgramContext::getRuleIndex() const {
  return OQASM2Parser::RuleProgram;
}

void OQASM2Parser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void OQASM2Parser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

OQASM2Parser::ProgramContext* OQASM2Parser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 12, OQASM2Parser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(145); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(144);
      line();
      setState(147); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << OQASM2Parser::T__11)
      | (1ULL << OQASM2Parser::T__14)
      | (1ULL << OQASM2Parser::T__15)
      | (1ULL << OQASM2Parser::T__16)
      | (1ULL << OQASM2Parser::COMMENT)
      | (1ULL << OQASM2Parser::QREG)
      | (1ULL << OQASM2Parser::CREG)
      | (1ULL << OQASM2Parser::GATE)
      | (1ULL << OQASM2Parser::MEASURE)
      | (1ULL << OQASM2Parser::RESET)
      | (1ULL << OQASM2Parser::BARRIER)
      | (1ULL << OQASM2Parser::OPAQUE)
      | (1ULL << OQASM2Parser::ID))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

OQASM2Parser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<OQASM2Parser::StatementContext *> OQASM2Parser::LineContext::statement() {
  return getRuleContexts<OQASM2Parser::StatementContext>();
}

OQASM2Parser::StatementContext* OQASM2Parser::LineContext::statement(size_t i) {
  return getRuleContext<OQASM2Parser::StatementContext>(i);
}

OQASM2Parser::CommentContext* OQASM2Parser::LineContext::comment() {
  return getRuleContext<OQASM2Parser::CommentContext>(0);
}

std::vector<OQASM2Parser::IncludeContext *> OQASM2Parser::LineContext::include() {
  return getRuleContexts<OQASM2Parser::IncludeContext>();
}

OQASM2Parser::IncludeContext* OQASM2Parser::LineContext::include(size_t i) {
  return getRuleContext<OQASM2Parser::IncludeContext>(i);
}


size_t OQASM2Parser::LineContext::getRuleIndex() const {
  return OQASM2Parser::RuleLine;
}

void OQASM2Parser::LineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine(this);
}

void OQASM2Parser::LineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine(this);
}

OQASM2Parser::LineContext* OQASM2Parser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 14, OQASM2Parser::RuleLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(160);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OQASM2Parser::T__14:
      case OQASM2Parser::T__15:
      case OQASM2Parser::T__16:
      case OQASM2Parser::QREG:
      case OQASM2Parser::CREG:
      case OQASM2Parser::GATE:
      case OQASM2Parser::MEASURE:
      case OQASM2Parser::RESET:
      case OQASM2Parser::BARRIER:
      case OQASM2Parser::OPAQUE:
      case OQASM2Parser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(150); 
        _errHandler->sync(this);
        alt = 1;
        do {
          switch (alt) {
            case 1: {
                  setState(149);
                  statement();
                  break;
                }

          default:
            throw NoViableAltException(this);
          }
          setState(152); 
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
        } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
        break;
      }

      case OQASM2Parser::COMMENT: {
        enterOuterAlt(_localctx, 2);
        setState(154);
        comment();
        break;
      }

      case OQASM2Parser::T__11: {
        enterOuterAlt(_localctx, 3);
        setState(156); 
        _errHandler->sync(this);
        alt = 1;
        do {
          switch (alt) {
            case 1: {
                  setState(155);
                  include();
                  break;
                }

          default:
            throw NoViableAltException(this);
          }
          setState(158); 
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
        } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

OQASM2Parser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OQASM2Parser::RegdeclContext* OQASM2Parser::StatementContext::regdecl() {
  return getRuleContext<OQASM2Parser::RegdeclContext>(0);
}

OQASM2Parser::GatedeclContext* OQASM2Parser::StatementContext::gatedecl() {
  return getRuleContext<OQASM2Parser::GatedeclContext>(0);
}

OQASM2Parser::OpaqueContext* OQASM2Parser::StatementContext::opaque() {
  return getRuleContext<OQASM2Parser::OpaqueContext>(0);
}

OQASM2Parser::QopContext* OQASM2Parser::StatementContext::qop() {
  return getRuleContext<OQASM2Parser::QopContext>(0);
}

OQASM2Parser::ConditionalContext* OQASM2Parser::StatementContext::conditional() {
  return getRuleContext<OQASM2Parser::ConditionalContext>(0);
}

OQASM2Parser::KernelcallContext* OQASM2Parser::StatementContext::kernelcall() {
  return getRuleContext<OQASM2Parser::KernelcallContext>(0);
}


size_t OQASM2Parser::StatementContext::getRuleIndex() const {
  return OQASM2Parser::RuleStatement;
}

void OQASM2Parser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void OQASM2Parser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

OQASM2Parser::StatementContext* OQASM2Parser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 16, OQASM2Parser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(178);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(162);
      regdecl();
      setState(163);
      match(OQASM2Parser::T__10);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(165);
      gatedecl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(166);
      opaque();
      setState(167);
      match(OQASM2Parser::T__10);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(169);
      qop();
      setState(170);
      match(OQASM2Parser::T__10);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(172);
      conditional();
      setState(173);
      match(OQASM2Parser::T__10);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(175);
      kernelcall();
      setState(176);
      match(OQASM2Parser::T__10);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

OQASM2Parser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OQASM2Parser::CommentContext::COMMENT() {
  return getToken(OQASM2Parser::COMMENT, 0);
}


size_t OQASM2Parser::CommentContext::getRuleIndex() const {
  return OQASM2Parser::RuleComment;
}

void OQASM2Parser::CommentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComment(this);
}

void OQASM2Parser::CommentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComment(this);
}

OQASM2Parser::CommentContext* OQASM2Parser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 18, OQASM2Parser::RuleComment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(180);
    match(OQASM2Parser::COMMENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IncludeContext ------------------------------------------------------------------

OQASM2Parser::IncludeContext::IncludeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OQASM2Parser::FilenameContext* OQASM2Parser::IncludeContext::filename() {
  return getRuleContext<OQASM2Parser::FilenameContext>(0);
}


size_t OQASM2Parser::IncludeContext::getRuleIndex() const {
  return OQASM2Parser::RuleInclude;
}

void OQASM2Parser::IncludeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInclude(this);
}
